--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title data-react-helmet="true">Managing the Remote Asset Challenge</title>
+      <title data-react-helmet="true">Managing the Remote Asset Challenge - How to improve remote working</title>
       <meta data-react-helmet="true" charset="utf-8"/>
       <meta data-react-helmet="true" name="viewport" content="width=device-width, initial-scale=1"/>
       <meta data-react-helmet="true" name="robots" content="noindex"/>
       <meta data-react-helmet="true" name="googlebot" content="noindex"/>
-      <meta data-react-helmet="true" property="og:title" content="How to Win Remote Learning"/>
-      <meta data-react-helmet="true" property="og:type" content="website"/>
-      <meta data-react-helmet="true" property="og:locale" content="en"/>
-      <meta data-react-helmet="true" property="og:url" content="https://prep.eposaudio.com/en/us/danni/edu-campaign"/>
-      <meta data-react-helmet="true" property="og:site_name" content="EPOS Website"/>
-      <meta data-react-helmet="true" name="twitter:site" content="@epos"/>
       <link data-react-helmet="true" rel="preload" as="font" crossOrigin="anonymous" href="https://prep.eposaudio.com/fonts/EPOSBasis-Regular.woff2"/>
       <link data-react-helmet="true" rel="preload" as="font" crossOrigin="anonymous" href="https://prep.eposaudio.com/fonts/EPOSBasis-Medium.woff2"/>
       <link data-react-helmet="true" rel="alternate" hreflang="en-CA" href="https://prep.eposaudio.com/en/ca/danni/edu-campaign"/>
@@ -129,7 +123,7 @@
 EPOS Audio Solutions </p>
 				<p class="NormalTextRun">
 In today’s world of geographically separated work spaces, clear and intelligible communication is more important than ever. Successful remote working depends greatly on the right tools, and EPOS offers a wide array of high-end audio solutions. From stylish statement headsets to minimalist in-ear neckband headsets to speakerphones for professionals who demand a seamless teamwork experience – no matter the location.</p><br />
-				   <p><a class="link link--dark two-block-promo-bundle__link milli link--animated-underline link--cover" data-epi-edit="leftText" href="itquotes-products.html"><span class="TextRun SCXW79727832 BCX0" data-contrast="auto"><span class="NormalTextRun SCXW79727832 BCX0">EPOS premium audio solutions</span></span></a></p>
+				   <p><a class="link link--dark two-block-promo-bundle__link milli link--animated-underline link--cover" data-epi-edit="leftText" href="itquotes-products"><span class="TextRun SCXW79727832 BCX0" data-contrast="auto"><span class="NormalTextRun SCXW79727832 BCX0">EPOS premium audio solutions</span></span></a></p>
 				 </div>	
 				 </div>
 					</div></div></section></div></div></div>
