--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 EPOS Audio Solutions </p>
 				<p class="NormalTextRun">
 In today’s world of geographically separated work spaces, clear and intelligible communication is more important than ever. Successful remote working depends greatly on the right tools, and EPOS offers a wide array of high-end audio solutions. From stylish statement headsets to minimalist in-ear neckband headsets to speakerphones for professionals who demand a seamless teamwork experience – no matter the location.</p><br />
-				   <p><a class="link link--dark two-block-promo-bundle__link milli link--animated-underline link--cover" data-epi-edit="leftText" href="itquotes-products.htm"><span class="TextRun SCXW79727832 BCX0" data-contrast="auto"><span class="NormalTextRun SCXW79727832 BCX0">EPOS premium audio solutions</span></span></a></p>
+				   <p>[a relative link](itquotes-products.html) class="link link--dark two-block-promo-bundle__link milli link--animated-underline link--cover" data-epi-edit="leftText" href="itquotes-products.html"><span class="TextRun SCXW79727832 BCX0" data-contrast="auto"><span class="NormalTextRun SCXW79727832 BCX0">EPOS premium audio solutions</span></span></a></p>
 				 </div>	
 				 </div>
 					</div></div></section></div></div></div>
