--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <link data-chunk="flickity" rel="preload" as="style" href="https://prep.eposaudio.com/flickity.5a7819df165e76bc76ac.css">
       <link data-chunk="flickity" rel="preload" as="script" href="https://prep.eposaudio.com/flickity.57dcfb3fc0793a23dbd4.js">
    </head>
-   <body >
+   <body style="max-width:1440px!important;margin:auto;">
            <div id="app">
       <div class="background background--grey-mid site  ">
          <a lang="en" href="#site-content" class="site__skip-to-content-link site__skip-to-content-link--light ">Skip to content</a>
