--- a/itquotes-products.html
+++ b/itquotes-products.html
@@ -13,16 +13,13 @@
       <link data-react-helmet="true" rel="dns-prefetch" href="https://web.global-e.com"/>
       <link data-react-helmet="true" rel="dns-prefetch" href="https://gepi.global-e.com"/>
     
-      <link data-chunk="client" rel="stylesheet" href="https://prep.eposaudio.com/vendors~client.44d75ce5d3eb04658189.css">
-      <link data-chunk="client" rel="stylesheet" href="https://prep.eposaudio.com/client.b62a2c3ae6d0f4d37691.css">
-      <link data-chunk="flickity" rel="stylesheet" href="https://prep.eposaudio.com/flickity.5a7819df165e76bc76ac.css">
-      <link data-chunk="client" rel="preload" as="style" href="https://prep.eposaudio.com/vendors~client.44d75ce5d3eb04658189.css">
-      <link data-chunk="client" rel="preload" as="script" href="https://prep.eposaudio.com/vendors~client.a5901f1ff15253e410bb.js">
-      <link data-chunk="client" rel="preload" as="style" href="https://prep.eposaudio.com/client.b62a2c3ae6d0f4d37691.css">
-      <link data-chunk="client" rel="preload" as="script" href="https://prep.eposaudio.com/client.518703beffe63c76d5f9.js">
-      <link data-chunk="flickity" rel="preload" as="script" href="https://prep.eposaudio.com/vendors~flickity.3d510d4f8ba8567375c7.js">
-      <link data-chunk="flickity" rel="preload" as="style" href="https://prep.eposaudio.com/flickity.5a7819df165e76bc76ac.css">
-      <link data-chunk="flickity" rel="preload" as="script" href="https://prep.eposaudio.com/flickity.57dcfb3fc0793a23dbd4.js">
+      <link data-chunk="client" rel="stylesheet" href="https://eposaudio.com/vendors~client.44d75ce5d3eb04658189.css">
+      <link data-chunk="client" rel="stylesheet" href="https://eposaudio.com/client.b62a2c3ae6d0f4d37691.css">
+      <link data-chunk="flickity" rel="stylesheet" href="https://eposaudio.com/flickity.5a7819df165e76bc76ac.css">
+	   <link data-chunk="client" rel="stylesheet" href="https://eposaudio.com/client.92cb9acf4a92378364de.css"><link data-chunk="client" rel="preload" as="style" href="https://eposaudio.com/vendors~client.44d75ce5d3eb04658189.css">
+<link data-chunk="client" rel="preload" as="script" href="https://eposaudio.com/vendors~client.cfab3860b8679a77dd9e.js">
+<link data-chunk="client" rel="preload" as="style" href="https://eposaudio.com/client.92cb9acf4a92378364de.css">
+<link data-chunk="client" rel="preload" as="script" href="https://eposaudio.com/client.dde221961d071ef4fb31.js">
    </head>
    <body style="max-width:1440px!important;margin:auto;">
            <div id="app">
